--- a/index.html
+++ b/index.html
@@ -5,7 +5,29 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" href="../assets/svg/logo-icon.svg" type="image/x-icon">
-  <title>Event Free</title>
+  <!-- Primary Meta Tags -->
+  <title>EventConnect – A Modern Platform for Event Discovery & Engagement</title>
+  <meta name="title" content="EventConnect – A Modern Platform for Event Discovery & Engagement" />
+  <meta name="description"
+    content="Discover and share events seamlessly with EventConnect — a platform for professionals to engage, collaborate, and stay updated through a dynamic social feed." />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://metatags.io/" />
+  <meta property="og:title" content="EventConnect – A Modern Platform for Event Discovery & Engagement" />
+  <meta property="og:description"
+    content="Discover and share events seamlessly with EventConnect — a platform for professionals to engage, collaborate, and stay updated through a dynamic social feed." />
+  <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+  <!-- X (Twitter) -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://metatags.io/" />
+  <meta property="twitter:title" content="EventConnect - A Modern Platform for Event Discovery & Engagement" />
+  <meta property="twitter:description"
+    content="Discover and share events seamlessly with EventConnect — a platform for professionals to engage, collaborate, and stay updated through a dynamic social feed." />
+  <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+  <!-- Meta Tags Generated with https://metatags.io -->
 </head>
 
 <body>
