--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" href="../assets/svg/logo-icon.svg" type="image/x-icon">
+  <link rel="shortcut icon" href="./src/assets/svg/logo-icon.svg" type="image/x-icon">
   <!-- Primary Meta Tags -->
   <title>EventConnect – A Modern Platform for Event Discovery & Engagement</title>
   <meta name="title" content="EventConnect – A Modern Platform for Event Discovery & Engagement" />
