--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" href="./src/assets/svg/logo-icon.svg" type="image/x-icon">
   <!-- Primary Meta Tags -->
-  <title>EventConnect – A Modern Platform for Event Discovery & Engagement</title>
-  <meta name="title" content="EventConnect – A Modern Platform for Event Discovery & Engagement" />
+  <title>EventConnect - A Modern Platform for Event Discovery & Engagement</title>
+  <meta name="title" content="EventConnect - A Modern Platform for Event Discovery & Engagement" />
   <meta name="description"
     content="Discover and share events seamlessly with EventConnect — a platform for professionals to engage, collaborate, and stay updated through a dynamic social feed." />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://metatags.io/" />
-  <meta property="og:title" content="EventConnect – A Modern Platform for Event Discovery & Engagement" />
+  <meta property="og:title" content="EventConnect - A Modern Platform for Event Discovery & Engagement" />
   <meta property="og:description"
     content="Discover and share events seamlessly with EventConnect — a platform for professionals to engage, collaborate, and stay updated through a dynamic social feed." />
-  <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+  <meta property="og:image" content='/meta-img.png' />
 
   <!-- X (Twitter) -->
   <meta property="twitter:card" content="summary_large_image" />
@@ -25,7 +25,7 @@
   <meta property="twitter:title" content="EventConnect - A Modern Platform for Event Discovery & Engagement" />
   <meta property="twitter:description"
     content="Discover and share events seamlessly with EventConnect — a platform for professionals to engage, collaborate, and stay updated through a dynamic social feed." />
-  <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+  <meta property="twitter:image" content="/meta-img.png" />
 
   <!-- Meta Tags Generated with https://metatags.io -->
 </head>
