again added the meta img

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta property="og:title" content="EventConnect - A Modern Platform for Event Discovery & Engagement" />
   <meta property="og:description"
     content="Discover and share events seamlessly with EventConnect — a platform for professionals to engage, collaborate, and stay updated through a dynamic social feed." />
-  <meta property="og:image" content='/meta-img.png' />
+  <meta property="og:image" content="https://eventfree-routingwebpage.netlify.app/meta-img.png" />
 
   <!-- X (Twitter) -->
   <meta property="twitter:card" content="summary_large_image" />
@@ -25,7 +25,7 @@
   <meta property="twitter:title" content="EventConnect - A Modern Platform for Event Discovery & Engagement" />
   <meta property="twitter:description"
     content="Discover and share events seamlessly with EventConnect — a platform for professionals to engage, collaborate, and stay updated through a dynamic social feed." />
-  <meta property="twitter:image" content="/meta-img.png" />
+  <meta property="twitter:image" content="https://eventfree-routingwebpage.netlify.app/meta-img.png" />
 
   <!-- Meta Tags Generated with https://metatags.io -->
 </head>
