--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://metatags.io/" />
+  <meta property="og:url" content="https://eventfree-routingwebpage.netlify.app/meta-img.png/" />
   <meta property="og:title" content="EventConnect - A Modern Platform for Event Discovery & Engagement" />
   <meta property="og:description"
     content="Discover and share events seamlessly with EventConnect — a platform for professionals to engage, collaborate, and stay updated through a dynamic social feed." />
@@ -21,7 +21,7 @@
 
   <!-- X (Twitter) -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://metatags.io/" />
+  <meta property="twitter:url" content="https://eventfree-routingwebpage.netlify.app/meta-img.png" />
   <meta property="twitter:title" content="EventConnect - A Modern Platform for Event Discovery & Engagement" />
   <meta property="twitter:description"
     content="Discover and share events seamlessly with EventConnect — a platform for professionals to engage, collaborate, and stay updated through a dynamic social feed." />
